# School-Super-Data-Structure

./: Block diagram.drawio  README.md
data/: DataGenerator.py  Manager.txt  Secretariat.txt  Students.txt  Teachers.txt  Tutors.txt  enums.py  main.py  temp.py
data/names - dataset/: datapackage.json
data/names - dataset/original/: baby-names-clean.csv
header/: AdministrativeMan.h  AuxiliaryFunctions.h  CMakeLists.txt  Class.h  Comparators.h  Enums.h  Layer.h  Manager.h  MedianFinder.h  Person.h  PriorityQueue.h  School.h  Secretary.h  Student.h  Teacher.h  Timer.h  Trie.h  TrieNode.h  Tutor.h  Worker.h  WorkersFactory.h  treeAnalyser.h
source/: AdministrativeMan.cpp  AuxiliaryFunctions.cpp  CMakeLists.txt  Class.cpp  Layer.cpp  Manager.cpp  MedianFinder.cpp  PriorityQueue.cpp  School.cpp  Secretary.cpp  Student.cpp  Teacher.cpp  Trie.cpp  TrieNode.cpp  Tutor.cpp  Worker.cpp  countingSortThreads.cpp  main.cpp  q.cpp  tempMain.cpp  treeAnalyser.cpp
